Fix spacing in featurettes on small screens.

--- a/docs/drafts/main.css
+++ b/docs/drafts/main.css
@@ -72,7 +72,7 @@ body {
   margin: 5rem 0; /* Space out the Bootstrap <hr> more */
 }
 
-/* Thin out the marketing headings */
+/* Thin out the headings */
 .featurette-heading {
   font-weight: 300;
   line-height: 1;
@@ -81,6 +81,10 @@ body {
 
 .featurette-image {
   object-fit: cover;
+}
+
+.featurette-text {
+  margin-bottom: 1rem;
 }
 
 /* HIGHLIGTS CONTENT
